fix text overflow on learn and rituals page

--- a/src/components/Rituals/ritualsContent.scss
+++ b/src/components/Rituals/ritualsContent.scss
@@ -1,12 +1,13 @@
 .ritualsContentContainer {
   margin: 10%;
+  margin-top: 4%;
   border: darkslateblue solid 1px;
   border-radius: 4px;
-  width: 50%;
+  width: 55%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 65%;
+  height: 90%;
   background-color: lavender;
   .contentHeader {
     text-align: center;
@@ -23,7 +24,8 @@
 @media screen and (max-width: 600px) {
   .ritualsContentContainer {
     margin: 50% 6.5%;
-    height: 80%;
-    width: 80%;
+    height: 90%;
+    width: 100%;
+    overflow-y: scroll;
   }
 }
